Exercise tidy-up

--- a/index.html
+++ b/index.html
@@ -53,22 +53,22 @@
     var distance = parseInt(prompt("Quanti Km devi percorrere?"));
     var price = distance * 0.21;
     var age = parseInt(prompt("Quanti anni hai?"));
-    var underAge = age < 18;
-    var overAge = age >= 65;
     var averageAge = (age >= 18) && (age <= 65);
-    var discountMinor = price * 20 / 100;
-    var priceCutMinor = price - discountMinor;
-    var discountSenior = price * 40 / 100;
-    var priceCutSenior = price - discountSenior;
 
-    if (overAge) {
+    if (age >= 65) {
+      var discountSenior = price * 40 / 100;
+      var priceCutSenior = price - discountSenior;
       console.log("sei un vecchio", distance, price, age, discountSenior, priceCutSenior)
       document.getElementById('lol').innerHTML = "sei un vecchio";
       document.getElementById('lallero').innerHTML = "il prezzo del tuo biglietto era pari ad € " + price + " ma grazie ad uno sconto del 40% sarà di € " + priceCutSenior;
-    } else if (underAge) {
+
+    } else if (age < 18) {
+      var discountMinor = price * 20 / 100;
+      var priceCutMinor = price - discountMinor;
       console.log("sei un moccioso", distance, price, age, discountMinor, priceCutMinor)
       document.getElementById('lol').innerHTML = "sei un moccioso";
       document.getElementById('lallero').innerHTML = "Il prezzo del tuo biglietto era pari ad € " + price + " ma grazie ad uno sconto del 20% sarà di € " + priceCutMinor;
+
     } else if (averageAge) {
       console.log("sei normale", distance, price, age)
       document.getElementById('lol').innerHTML = "sei normale";
